# uhttpd

./: .gitignore  CMakeLists.txt  README.md  uhttpd-cgi.c  uhttpd-cgi.h  uhttpd-file.c  uhttpd-file.h  uhttpd-lua.c  uhttpd-ubus.c  uhttpd-ubus.h  uhttpd-utils.c  uhttpd-utils.h  uhttpd.c  uhttpd.h
docroot/: error.txt  index.html  index.php
docroot/art/: 1.html
docroot/三体/: 三体1.txt  三体2.txt  三体3.txt
libubox-learn/: list.h  runqueue.h  uloop-epoll.c  uloop-kqueue.c  uloop.c  uloop.h  ustream.h  utils.c
ubus-lean/: libubus-req.c  libubus.c  ubusd.c
ubus-lean/lua/: ubus.c
ubus-learn/: libubus-obj.c  libubus.h  ubusd.h  ubusd_event.c  ubusd_monitor.c  ubusd_proto.c
ubus-learn/lua/: subscriber.lua
